Fix dark mode

--- a/public/css/dark.scss
+++ b/public/css/dark.scss
@@ -236,7 +236,8 @@ input[type="checkbox"][disabled] {
 .badge-success,
 .badge-info,
 .badge-warning,
-.badge-dark {
+.badge-dark,
+.badge-yellow {
 	color: $white;
 }
 
